# oculus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  cli.rs  error.rs  filter.rs  main.rs  reader.rs  types.rs
src/output/: csv.rs  json.rs  terminal.rs
src/parser/: apache.rs  detector.rs  json.rs  mod.rs  nginx.rs
tests/: cli_tests.rs
