[package]
name = "oculus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
flate2 = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmark will be added in Phase 4
